initial version up

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
 	<meta charset="utf-8">
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-title" content="--yourSiteName--">
+	<meta name="apple-mobile-web-app-title" content="Kunstkritik-Generator">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-	<title>--yourSiteName--</title>
+	<title>Kunstkritik-Generator</title>
 
-	<link rel="apple-touch-icon" href="icons/180x180.png" />
-	<link rel="shortcut icon" href="icons/favicon.png">
-	<link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 
 <body>
+	<div>
+		<p>Das Substrat</p>
+		<p>illuminiert</p>
+		<p>figurativ</p>
+		<p>das Artifizielle</p>
+	</div>
 
 	<script src="js/app.js"></script>
 </body>
