--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 		<p>figurativ</p>
 		<p>das Artifizielle</p>
 	</div>
-
+	<footer>
+		<p><a href="https://github.com/Tehes">made by Tehes</a></p>
+	</footer>
 	<script src="js/app.js"></script>
 </body>
 
