--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'>
@@ -12,7 +13,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
-	
+
 	<script async src="https://cdn.splitbee.io/sb.js"></script>
 </head>
 
@@ -24,7 +25,9 @@
 		<p>das Artifizielle</p>
 	</div>
 	<footer>
-		<p><a href="https://github.com/Tehes">made by Tehes</a></p>
+		<p><a href="https://www.threads.net/@tehes83"><img alt="Threads-Symbol" src="svg/threads.svg"></a>
+			<a href="https://github.com/tehes"><img alt="Guthub-Symbol" src="svg/github.svg"></a>
+		</p>
 	</footer>
 	<script src="js/app.js"></script>
 </body>
