Refactor JavaScript functions for better readability and performance; update script type in HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<a href="https://github.com/tehes"><img alt="Guthub-Symbol" src="svg/github.svg"></a>
 		</p>
 	</footer>
-	<script src="js/app.js"></script>
+	<script type="module" src="js/app.js"></script>
 </body>
 
 </html>
