--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
 
-	<script async src="https://cdn.splitbee.io/sb.js"></script>
+	<script defer src="https://cloud.umami.is/script.js"
+		data-website-id="2392a451-203c-4d8a-a4f5-bd7d06f832af"></script>
 </head>
 
 <body>
